Initialize と内部時計の実装

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -165,7 +165,7 @@
           return;
         }
 
-        const res = await fetch('/api/add_train', {
+        const res = await fetch('/api/admin/add_train', {
           method: 'POST',
           headers: {'Content-Type':'application/json'},
           body: JSON.stringify({
