scheduleを列車と、trainを列車筐体と呼ぶように変更

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -43,13 +43,13 @@
       </div>
     </section>
 
-    <!-- 2. 電車毎の販売情報 -->
+    <!-- 2. 列車毎の販売情報 -->
     <section class="mb-5">
-      <h2 class="mb-3">電車毎の販売状況</h2>
+      <h2 class="mb-3">列車毎の販売状況</h2>
       <table class="table table-striped table-bordered">
         <thead class="table-light">
           <tr>
-            <th>電車名</th>
+            <th>列車名</th>
             <th>販売枚数</th>
             <th>未確定売上</th>
             <th>確定売上</th>
