--- a/frontend/waiting.html
+++ b/frontend/waiting.html
@@ -50,7 +50,7 @@
       z-index: -1;
     }
 
-    /* 電車アイコン */
+    /* 列車アイコン */
     .train-icon {
       position: absolute;
       top: 50%;
@@ -108,7 +108,7 @@
         <i class="bi bi-bag destination-icon"></i>
       </div>
 
-      <!-- 電車アイコン -->
+      <!-- 列車アイコン -->
       <i class="bi bi-train-front train-icon"></i>
     </div>
 
