--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,8 +36,8 @@
       <h2 class="mb-3">予約フォーム</h2>
       <form id="reservation-form" class="row g-3">
         <div class="col-md-3">
-          <label for="train-select" class="form-label">電車</label>
-          <select id="train-select" class="form-select"></select>
+          <label for="schedule-select" class="form-label">列車名</label>
+          <select id="schedule-select" class="form-select"></select>
         </div>
         <div class="col-md-3">
           <label for="from-station-select" class="form-label">乗車駅</label>
@@ -57,12 +57,12 @@
       </form>
     </section>
 
-    <section id="train-list-section" class="mb-5">
-      <h2 class="mb-3">直近発車の電車一覧</h2>
-      <table id="train-list-table" class="table table-striped table-bordered table-responsive mb-4">
+    <section id="schedule-list-section" class="mb-5">
+      <h2 class="mb-3">チケット販売中の列車一覧</h2>
+      <table id="schedule-list-table" class="table table-striped table-bordered table-responsive mb-4">
         <thead class="table-light">
           <tr>
-            <th rowspan="2" class="align-middle">電車名</th>
+            <th rowspan="2" class="align-middle">列車名</th>
             <th colspan="4" class="text-center">往路</th>
             <th colspan="4" class="text-center">復路</th>
           </tr>
@@ -77,7 +77,7 @@
             <th>B <i class="bi bi-arrow-right"></i> A</th>
           </tr>
         </thead>
-        <tbody id="train-list-tbody"></tbody>
+        <tbody id="schedule-list-tbody"></tbody>
       </table>
     </section>
 
@@ -86,7 +86,7 @@
       <table id="purchased-tickets-table" class="table table-striped table-bordered table-responsive">
         <thead class="table-light">
           <tr>
-            <th>電車名</th>
+            <th>列車名</th>
             <th>乗車駅</th>
             <th>降車駅</th>
             <th>出発時間</th>
@@ -143,10 +143,10 @@
       }
     };
 
-    async function fetchTrains() {
-      const res = await fetch('/api/trains');
+    async function fetchSchedules() {
+      const res = await fetch('/api/schedules');
       const data = await res.json();
-      return data.trains;
+      return data.schedules;
     }
 
     async function fetchStations() {
@@ -163,23 +163,23 @@
 
     async function fetchPurchasedTickets() {
       // APIで購入済みチケット一覧取得
-      // 例: [{"train_name":"...","from_station":"...","to_station":"...","departure_time":"...","num_people":2,"total_price":20000,"entered":false,"entry_token":"...","qr_code_url":"..."}]
+      // 例: [{"schedule_id":"...","from_station":"...","to_station":"...","departure_time":"...","num_people":2,"total_price":20000,"entered":false,"entry_token":"...","qr_code_url":"..."}]
       const res = await fetch('/api/purchased_tickets');
       const data = await res.json();
       return data.tickets;
     }
 
-    let trains = [];
+    let schedules = [];
     let stations = [];
     let currentHours = 0;
     let currentMinutes = 0;
     let clockInterval = null;
     let purchasedTickets = [];
 
-    const trainSelect = document.getElementById('train-select');
+    const scheduleSelect = document.getElementById('schedule-select');
     const fromStationSelect = document.getElementById('from-station-select');
     const toStationSelect = document.getElementById('to-station-select');
-    const trainListTbody = document.getElementById('train-list-tbody');
+    const scheduleListTbody = document.getElementById('schedule-list-tbody');
     const reserveButton = document.getElementById('reserve-button');
     const numPeopleInput = document.getElementById('num-people');
     const currentTimeDisplay = document.getElementById('current-time-display');
@@ -206,11 +206,11 @@
     };
 
     async function init() {
-      const [fetchedTrains, fetchedStations, fetchedCurrentTime, fetchedTickets] = await Promise.all([
-        fetchTrains(), fetchStations(), fetchCurrentTime(), fetchPurchasedTickets()
+      const [fetchedSchedules, fetchedStations, fetchedCurrentTime, fetchedTickets] = await Promise.all([
+        fetchSchedules(), fetchStations(), fetchCurrentTime(), fetchPurchasedTickets()
       ]);
 
-      trains = fetchedTrains;
+      schedules = fetchedSchedules;
       stations = fetchedStations;
       purchasedTickets = fetchedTickets; // APIから取得した購入済みチケットをセット
 
@@ -218,8 +218,8 @@
       currentHours = h;
       currentMinutes = m;
 
-      renderTrainList(trains);
-      renderTrainOptions(trains);
+      renderSchedules(schedules);
+      renderScheduleOptions(schedules);
       renderStationOptions(stations, fromStationSelect);
       renderStationOptions(stations, toStationSelect);
 
@@ -228,25 +228,25 @@
       updateCurrentTimeDisplay();
       startClockSimulation();
 
-      // 定期的に電車一覧を更新(100msごと)
-      var updatedTrains
+      // 定期的に列車(スケジュール)一覧を更新
+      var updatedSchedules
       setInterval(async () => {
-        lastData = structuredClone(updatedTrains);
-        updatedTrains = await fetchTrains();
-        if (JSON.stringify(lastData) !== JSON.stringify(updatedTrains)) {
-          renderTrainList(updatedTrains);
-          renderTrainOptions(updatedTrains);
+        lastData = structuredClone(updatedSchedules);
+        updatedSchedules = await fetchSchedules();
+        if (JSON.stringify(lastData) !== JSON.stringify(updatedSchedules)) {
+          renderSchedules(updatedSchedules);
+          renderScheduleOptions(updatedSchedules);
         }
       }, 100);
     }
 
-    function renderTrainList(trainData) {
-      trainListTbody.innerHTML = '';
+    function renderSchedules(scheduleData) {
+      scheduleListTbody.innerHTML = '';
 
-      trainData.forEach(t => {
+      scheduleData.forEach(t => {
         const tr = document.createElement('tr');
         const tdName = document.createElement('td');
-        tdName.textContent = t.name;
+        tdName.textContent = t.id;
         tr.appendChild(tdName);
 
         segmentMap.forEach(seg => {
@@ -260,17 +260,17 @@
           tr.appendChild(td);
         });
 
-        trainListTbody.appendChild(tr);
+        scheduleListTbody.appendChild(tr);
       });
     }
 
-    function renderTrainOptions(trainData) {
-      trainSelect.innerHTML = '';
-      trainData.forEach(t => {
+    function renderScheduleOptions(scheduleData) {
+      scheduleSelect.innerHTML = '';
+      scheduleData.forEach(t => {
         const option = document.createElement('option');
         option.value = t.id;
-        option.textContent = t.name;
-        trainSelect.appendChild(option);
+        option.textContent = t.id;
+        scheduleSelect.appendChild(option);
       });
     }
 
@@ -285,7 +285,7 @@
     }
 
     reserveButton.addEventListener('click', async () => {
-      const selectedTrainId = trainSelect.value;
+      const selectedScheduleId = scheduleSelect.value;
       const fromStationId = fromStationSelect.value;
       const toStationId = toStationSelect.value;
       const numPeople = parseInt(numPeopleInput.value, 10);
@@ -294,7 +294,7 @@
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({
-          train_id: selectedTrainId,
+          schedule_id: selectedScheduleId,
           from_station_id: fromStationId,
           to_station_id: toStationId,
           num_people: numPeople
@@ -315,7 +315,7 @@
 
         modalBody.innerHTML = `
           <p>${res.status === 'success' ? messages.success : messages.recommend}</p>
-          <p>電車名: ${info.train_name}</p>
+          <p>列車名: ${info.schedule_name}</p>
           <p>区間: ${info.from_station} -> ${info.to_station}</p>
           <p>出発時間: ${info.departure_time}</p>
           <p>座席: ${info.seats.join(', ')}</p>
@@ -365,7 +365,7 @@
       if (purchaseRes.status === 'success') {
         // /api/purchaseからは情報返らない前提なのでinfoをそのまま使用
         purchasedTickets.push({
-          train_name: info.train_name,
+          schedule_id: info.schedule_id,
           from_station: info.from_station,
           to_station: info.to_station,
           departure_time: info.departure_time,
@@ -386,9 +386,9 @@
       purchasedTickets.forEach((ticket, index) => {
         const tr = document.createElement('tr');
 
-        const tdTrain = document.createElement('td');
-        tdTrain.textContent = ticket.train_name;
-        tr.appendChild(tdTrain);
+        const tdSchedule = document.createElement('td');
+        tdSchedule.textContent = ticket.schedule_id;
+        tr.appendChild(tdSchedule);
 
         const tdFrom = document.createElement('td');
         tdFrom.textContent = ticket.from_station;
@@ -423,7 +423,7 @@
         refundBtn.className = 'btn btn-danger btn-sm';
         refundBtn.textContent = '返金';
         refundBtn.addEventListener('click', () => {
-          console.log(`返金ボタンが押されました: ${ticket.train_name}`);
+          console.log(`返金ボタンが押されました: ${ticket.schedule_id}`);
           // 返金処理(API)が成功したら削除など
           purchasedTickets.splice(index,1);
           renderPurchasedTickets();
